eks-platform/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: payment-app
  namespace: payment
  annotations:
    kubernetes.io/change-cause: Updated image to v1.25

spec:
  replicas: 3

  selector:
    matchLabels:
      app: payment

  template:
    metadata:
      labels:
        app: payment

    spec:
      containers:
      - name: payment-container

        image: nginx:1.24

        ports:
        - containerPort: 80

        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"

          limits:
            memory: "256Mi"
            cpu: "200m"

        livenessProbe:
          httpGet:
            path: /
            port: 80

          initialDelaySeconds: 10
          periodSeconds: 5

        readinessProbe:
          httpGet:
            path: /
            port: 80

          initialDelaySeconds: 5
          periodSeconds: 3
