eks-platform/manifests/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: payment-service
  namespace: payment

spec:
  selector:
    app: payment

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
